# ccr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
other_langage/: ccr_bun.ts  ccr_deno.ts
src/: constants.rs  error.rs  lib.rs  loader.rs  main.rs  session_blocks.rs  unified_loader.rs
src/formatting/: mod.rs
src/pricing/: mod.rs
src/types/: burn_rate.rs  context_tokens.rs  cost.rs  ids.rs  input.rs  mod.rs  pricing.rs  remaining_time.rs  session.rs  usage.rs
src/utils/: context.rs  data_loader.rs  dedup.rs  git.rs  mod.rs  paths.rs  transcript_loader.rs
