[package]
name = "ccr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
colored = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
home = "0.5"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.14"
mockall = "0.13"