[package]
name = "ccr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", default-features = false, features = ["rt-multi-thread", "fs", "macros"] }
colored = "3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }
home = "0.5"
rayon = "1.11"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.14"
mockall = "0.13"

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"            # Enable Link Time Optimization for better performance
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller binary, slightly faster
strip = true           # Strip symbols for smaller binary
overflow-checks = false # Disable overflow checks in release